<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyDrunkenDiaries</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_party">Nouvelle soirée</string>
    <string name="new_place">Nouveau lieu</string>
    <string name="party_begin">Début d\'activité : </string>
    <string name="party_end">Fin d\'activité : </string>
    <string name="party_list_header">Soirées : </string>
    <string name="btn_party_end">Fin d\'activité</string>
    <string name="dash">-</string>
    <string name="slash">/</string>
    <string name="contentdesc_camera">Voir les vidéos</string>
    <string name="contentdesc_gallery">Voir les images</string>
    <string name="contentdesc_map">Voir sur la carte</string>
    <string name="contentdesc_clock">Heure</string>
    <string name="contentdesc_weather">Météo</string>
    <string name="contentdesc_search">Rechercher</string>
    <string name="hint_search_city">Ville</string>
    <string name="places_list_header">Lieux</string>
    <string name="title_activity_party_detail">Liste des lieux</string>
    <string name="title_activity_map">Itinéraire</string>
    <string name="title_activity_party">Soirées</string>
    <string name="tab_party_detail_places">Lieux</string>
    <string name="tab_party_detail_maps">Carte</string>
    <string name="add_new">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="dialog_confirm_new_trip">L\'ajout d\'un lieu terminera celui en cours</string>
    <string name="valid">Valider</string>
    <string name="settings">Paramétrage</string>
    <string name="party_list_btn">Voir les soirées</string>
    <string name="item_selected">Sélectionnés : </string>
    <string name="action_end_party">Terminer la soirée</string>
    <string name="title_activity_trip_gallery">TripGalleryActivity</string>
    <string name="action_settings">Settings</string>

</resources>
