<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_row_selector"
    android:orientation="vertical"
    android:padding="5dip">
     
    <RelativeLayout 
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
	      <TextView 
	          android:id="@+id/title"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_alignParentLeft="true"
	          android:layout_alignParentStart="true"
	          android:textColor="#343434"
	          android:textSize="25sp"
	      />
       	  <ImageView
       	      android:id="@+id/gallery"
       	      android:contentDescription="@string/contentdesc_gallery"
       	      android:layout_width="30dip"
       	      android:layout_height="30dip"
       	      android:layout_below="@+id/title"
       	      android:src="@drawable/content_picture"
       	  />
       	  <ImageView
       	      android:id="@+id/maps"
       	      android:contentDescription="@string/contentdesc_map"
       	      android:layout_width="30dip"
       	      android:layout_height="30dip"
       	      android:layout_below="@+id/title"
       	      android:layout_toRightOf="@+id/gallery"
       	      android:layout_toEndOf="@+id/gallery"
       	      android:src="@drawable/location_map" 
       	  />
 
      </RelativeLayout>
      <ImageView 
          android:id="@+id/clock"
          android:contentDescription="@string/contentdesc_clock"
          android:layout_width="30dip"
          android:layout_height="30dip"
          android:src="@drawable/device_access_time"
          android:layout_toLeftOf="@+id/hours"
          android:layout_toStartOf="@+id/hours"
      />
      <TextView
          android:id="@+id/hours"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_alignParentEnd="true"
          android:textSize="20sp" 
      />
      

</RelativeLayout>
